--- a/pages/index.html
+++ b/pages/index.html
@@ -1,2 +1,19 @@
-<link rel="stylesheet" href="./style.css">
-<h1>Hello Express!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email Event Generator</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body style="background-color: #f0f0f0; text-align: center; padding: 20px;">
+    <h1>Welcome to the open-Email Event Listener!</h1>
+    
+    <!-- Create a button that redirects to '/metrics' -->
+    <a href="/metrics" style="text-decoration: none;">
+        <button style="background-color: #007bff; color: #fff; padding: 10px 20px; border: none; cursor: pointer;">
+            Go to Metrics to listen Real Time Events
+        </button>
+    </a>
+</body>
+</html>
